<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/ittrangchu"
            android:icon="@drawable/trangchu"
            android:title="@string/trangchu" />
        <item
            android:id="@+id/itthucdon"
            android:icon="@drawable/logodangnhap"
            android:title="@string/thucdon" />
        <item
            android:id="@+id/itnhanvien"
            android:icon="@drawable/nhanvien"
            android:title="@string/nhanvien" />
        <item
            android:id="@+id/itthongke"
            android:icon="@drawable/thongke"
            android:title="@string/thongke" />
        <item
            android:id="@+id/itcaidat"
            android:icon="@drawable/caidat"
            android:title="@string/caidat" />

    </group>

</menu>