<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@color/bgdn">
   <LinearLayout
       android:layout_margin="@dimen/size10"
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
      <LinearLayout

          android:layout_width="match_parent"
          android:orientation="horizontal"
          android:layout_height="wrap_content">
          <TextView
              android:textColor="@color/white"
              android:layout_marginTop="@dimen/size50"
              android:textSize="@dimen/size30"
              android:text="@string/dangnhap"
              android:layout_marginLeft="@dimen/size30"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />
          <ImageView
              android:id="@+id/img"
              android:src="@drawable/logodangnhap"
              android:layout_width="@dimen/size150"
              android:layout_height="@dimen/size150" />
      </LinearLayout>
       <EditText
           android:drawableLeft="@drawable/user"
           android:drawablePadding="@dimen/size10"
           android:id="@+id/txtTENDN"
           android:padding="@dimen/size10"
           android:background="@color/white"
           android:layout_margin="@dimen/size10"
           android:hint="@string/tendangnhap"
           android:layout_width="match_parent"
           android:layout_height="@dimen/size50" />
       <EditText
           android:drawableLeft="@drawable/password"
           android:drawablePadding="@dimen/size10"
           android:password="true"
           android:id="@+id/txtMatKhau"
           android:padding="@dimen/size10"
           android:background="@color/white"
           android:hint="@string/matkhau"
           android:layout_margin="@dimen/size10"
           android:layout_width="match_parent"
           android:layout_height="@dimen/size50" />
       <Button
           android:id="@+id/bntDangNhap"
           android:textAllCaps="false"
           android:background="@drawable/selector_btn"
           android:text="@string/ok"
           android:layout_margin="@dimen/size5"
           android:layout_width="match_parent"
           android:layout_height="@dimen/size60" />
       <Button
           android:id="@+id/btnDangKy"
           android:background="@drawable/selecto_customerbtn"
           android:textAllCaps="false"
           android:text="@string/dangky"
           android:layout_margin="@dimen/size5"
           android:layout_width="match_parent"
           android:layout_height="@dimen/size60" />
   </LinearLayout>
</RelativeLayout>